panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__functions__test_no_return_from_noreturn_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/test_no_return_from_noreturn_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_no_return_from_noreturn_function.c"
   (declaration external exit~0 `fn(∅: int) -> void` ∅)
   (function-definition external
      f~1 `fn() -> void`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn(∅: int) -> void>`
                  (exit~0 `fn(∅: int) -> void`))
               (42 `int`)))
         (expression (error `void`))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (f~1 `fn() -> void`)))))))

----- stderr -----
