panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__functions__test_return_from_noreturn_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/test_return_from_noreturn_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_return_from_noreturn_function.c"
   (function-definition external
      g~0 `fn() -> void`
      (compound-statement
         (expression (error `void`))))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call `void`
               (addressof `ptr<fn() -> void>`
                  (g~0 `fn() -> void`)))))))

----- stderr -----
